# Granja-GALU

./: README.md  package-lock.json  package.json  pyproject.toml  run_app.py  server.js
docs/: template_notes.md
src/granja_galu/: __init__.py  run_app.py
src/granja_galu/api/: content.py  service.py
src/granja_galu/application/use_cases/: catalogo_saludable.py  crear_lote.py
src/granja_galu/domain/entities/: lote.py  producto.py  suscripcion.py
src/granja_galu/domain/ports/: lote_repository.py
src/granja_galu/domain/value_objects/: estado_lote.py
src/granja_galu/infrastructure/repositories/: lote_repository_mem.py
tests/: test_catalogo_saludable.py  test_crear_lote.py  test_node_launcher.py  test_run_app.py  test_web_flow_scripts.py  test_web_templates.py
web/: carrito.html  cart.js  categorias.html  checkout.html  index.html  main.js  producto.html  productos.html  products.js  styles.css  suscripciones.html
